{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 61,
  "lineage": "1660b8f9-6a0e-665b-77bd-591b5931c52c",
  "resources": [
    {
      "module": "module.linux_vm",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/711c8833-9a55-403a-bcc6-442edb0a1994/resourceGroups/ansibledev-df/providers/Microsoft.Network/virtualNetworks/ansibledev-df/subnets/default",
            "name": "default",
            "network_security_group_id": "/subscriptions/711c8833-9a55-403a-bcc6-442edb0a1994/resourceGroups/ansibledev-df/providers/Microsoft.Network/networkSecurityGroups/ansibledev-df",
            "resource_group_name": "ansibledev-df",
            "virtual_network_name": "ansibledev-df"
          }
        }
      ]
    },
    {
      "module": "module.linux_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/711c8833-9a55-403a-bcc6-442edb0a1994/resourceGroups/ansibledev-df/providers/Microsoft.Network/networkInterfaces/ansibledev-df",
            "internal_domain_name_suffix": "4bibiv440gzelkiusq1vne0azb.lx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/711c8833-9a55-403a-bcc6-442edb0a1994/resourceGroups/ansibledev-df/providers/Microsoft.Network/publicIPAddresses/ansibledev-df",
                "subnet_id": "/subscriptions/711c8833-9a55-403a-bcc6-442edb0a1994/resourceGroups/ansibledev-df/providers/Microsoft.Network/virtualNetworks/ansibledev-df/subnets/default"
              }
            ],
            "location": "japaneast",
            "name": "ansibledev-df",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "ansibledev-df"
          },
          "dependencies": [
            "module.linux_vm.azurerm_network_security_group.subnet1nsg1",
            "module.linux_vm.azurerm_public_ip.pip1",
            "module.linux_vm.azurerm_resource_group.rg1",
            "module.linux_vm.azurerm_virtual_network.vnet1",
            "module.linux_vm.data.azurerm_subnet.default"
          ]
        }
      ]
    },
    {
      "module": "module.linux_vm",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "subnet1nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/711c8833-9a55-403a-bcc6-442edb0a1994/resourceGroups/ansibledev-df/providers/Microsoft.Network/networkSecurityGroups/ansibledev-df",
            "location": "japaneast",
            "name": "ansibledev-df",
            "resource_group_name": "ansibledev-df",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linux_vm.azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "module": "module.linux_vm",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "subnet1nsg1rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow inbound SSH ",
            "destination_address_prefix": "10.0.0.5",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/711c8833-9a55-403a-bcc6-442edb0a1994/resourceGroups/ansibledev-df/providers/Microsoft.Network/networkSecurityGroups/ansibledev-df/securityRules/SSH_allow",
            "name": "SSH_allow",
            "network_security_group_name": "ansibledev-df",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "ansibledev-df",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linux_vm.azurerm_network_security_group.subnet1nsg1",
            "module.linux_vm.azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "module": "module.linux_vm",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "ansibledev-df",
            "fqdn": "ansibledev-df.japaneast.cloudapp.azure.com",
            "id": "/subscriptions/711c8833-9a55-403a-bcc6-442edb0a1994/resourceGroups/ansibledev-df/providers/Microsoft.Network/publicIPAddresses/ansibledev-df",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "japaneast",
            "name": "ansibledev-df",
            "resource_group_name": "ansibledev-df",
            "sku": "Basic"
          },
          "dependencies": [
            "module.linux_vm.azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "module": "module.linux_vm",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/24"
            ],
            "guid": "571450f0-d1de-45b2-a914-9437569340c9",
            "id": "/subscriptions/711c8833-9a55-403a-bcc6-442edb0a1994/resourceGroups/ansibledev-df/providers/Microsoft.Network/virtualNetworks/ansibledev-df",
            "location": "japaneast",
            "name": "ansibledev-df",
            "resource_group_name": "ansibledev-df",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/711c8833-9a55-403a-bcc6-442edb0a1994/resourceGroups/ansibledev-df/providers/Microsoft.Network/virtualNetworks/ansibledev-df/subnets/default",
                "name": "default",
                "security_group": "/subscriptions/711c8833-9a55-403a-bcc6-442edb0a1994/resourceGroups/ansibledev-df/providers/Microsoft.Network/networkSecurityGroups/ansibledev-df"
              }
            ]
          },
          "dependencies": [
            "module.linux_vm.azurerm_network_security_group.subnet1nsg1",
            "module.linux_vm.azurerm_resource_group.rg1"
          ]
        }
      ]
    }
  ]
}